fix: changed root colour to hide white bar on mobile

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -48,6 +48,10 @@
   outline: none !important;
 }
 
+:root{
+  background-color: var(--color-dark-background);
+}
+
 ::-webkit-scrollbar {
   width: 8px;
 }
